2017-01-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/gpgme_util.c (determine_gpghome): Removed. Functionality
	merged into openvas_init_gpgme_ctx().
	(openvas_init_gpgme_ctx): Determine the path directly here.

2017-01-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Removing support of environment variable OPENVAS_GPGHOME.
	This is too magic for its own good.

	* base/gpgme_util.c (determine_gpghome, get_sysconf_gpghome): Do not
	consider OPENVAS_GPGHOME anymore.

2017-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_logging.c: Fix typos in documentation.

2017-01-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl.c (parse_script_infos): Remove "NVTI" from args list on
	script failure too. Fixes segfault when running multiple scripts.

2017-01-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/pcap.c (routethrough): Remove dead code used for very old
	systems.

2017-01-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Fix a number of documentation issues.

	* misc/bpf_share.c: Remove use of ref without existing target.

	* misc/network.c: Properly escape XML characters used in
	documentation.

	* misc/openvas_auth.c: Remove duplicate brief command. Replace use of
	ref without existing target.

	* misc/openvas_auth.h: Remove duplicate brief commands. Replace use of
	ref without existing target.

	* misc/openvas_server.c: Removed reference without existing target.
	Make sure parameter names in documentation match those in code.

	* misc/plugutils.c: Replace uses of ref without existing targets.

	* misc/prefs.h: Refer to the correct file.

	* nasl/nasl_builtin_synscan.c: Replace uses of ref without existing
	targets.

2017-01-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openvas_auth.c (get_password_hashes): Remove algorithm parameter
	as only md5 is used.

	* misc/openvas_auth.h: Adjust function header.

2017-01-09  Hani Benhabiles <hani.benhabiles@greenbone.net>
